chore: fix alignment in back to dashboard button in chat view

--- a/src/userportal/src/components/CopilotChat.css
+++ b/src/userportal/src/components/CopilotChat.css
@@ -66,6 +66,10 @@ ul.session-list {
     color: #292A31 !important;
     font-weight: bold !important;
     font-size: 20px !important;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
 }
 
 .alert.chat-response{
